# relational

./: .gitignore  CHANGELOG.md  README.md  hie.yaml  relational.cabal
.github/workflows/: ci.yml
app/: Main.hs
benchmark/: Main.hs
src/: Relational.hs
src/Relational/: Algebra.hs  Example.hs
src/Relational/Data/: Attribute.hs  Bag.hs  Elem.hs  Heading.hs  Relation.hs  Table.hs  Tuple.hs
test/: Spec.hs
