cabal-version:       3.0
name:                relational
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/njaremko/relational
bug-reports:         https://github.com/njaremko/relational/issues
license:             MIT
license-file:        LICENSE
author:              Nathan Jaremko
maintainer:          Nathan Jaremko <nathan@jaremko.ca>
copyright:           2020 Nathan Jaremko
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.2

source-repository head
  type:                git
  location:            https://github.com/njaremko/relational.git

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , bytestring
                     , containers
                     , multiset
                     , relude
                     , stm
                     , transformers
                     , text
                     , time
                     , vector
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
                       -haddock

  default-extensions:  ApplicativeDo BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DuplicateRecordFields EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude OverloadedStrings PatternSynonyms RankNTypes ScopedTypeVariables StandaloneDeriving StrictData TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Relational
                    ,  Relational.Algebra
                    ,  Relational.Data.Attribute
                    ,  Relational.Data.Bag
                    ,  Relational.Data.Elem
                    ,  Relational.Data.Heading
                    ,  Relational.Data.Relation
                    ,  Relational.Example

executable relational
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       relational
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite relational-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       relational
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark relational-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , relational
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
